2019-04-20  Charlie Zender  <zender@uci.edu>

	* nco_rgr_wgt() remove ~150 lines of unused/unfinished !flg_mrv, flg_xtn code

2019-04-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha10: Hanna';git push
	git tag -a 4.8.0-alpha10 -m 'ncks --chk_nan;OMP_PROC_BIND ncclimo';git push --tags

	* ncclimo set OMP_PROC_BIND=false when calling ncrcat to fix Cori slowness reported by Min Xu

	* Pass thr_nbr into OpenMP loops as shared variable, avoid omp_get_thread_num() when thr_nbr < 2

	* ncra.c only call nco_omp_ini() when thr_nbr > 1

	* ncclimo splitter defaults to 1 OpenMP thread

	* ncclimo print OpenMP thread request in output header

	* Re-unify Windows/UNIX block in nco_netcdf.h to #include <netcdf_mem.h> and define ncmemio struct

	* Deprecate NC_HAVE_META_H from CMakeLists.txt

2019-04-18  Charlie Zender  <zender@uci.edu>

	* ncks add --chk_nan option to check input file for NaNs and exit(EXIT_FAILURE) if found
	Feature requested by Matthew Thompson of NASA

2019-04-17  Charlie Zender  <zender@uci.edu>

	* Noel Keen solves Cori-KNL slowness issue, reduces Min Xu's benchmark time from ~27m30s to ~2m30s

	* Appveyor errors are due to CMakeLists.txt flaw that overrides	correct NC_LIB_VERSION

2019-04-16  Charlie Zender  <zender@uci.edu>

	* Fail to solve Appveyor errors on Windows by never defining NC_memio for Windows for netCDF <= 4.6.1

2019-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha09: Boulder Bay Proposal';git push
	git tag -a 4.8.0-alpha09 -m 'ncap2 allows no input file;ncremap --no_stdin';git push --tags

	* ncap2 uses FORCE_OVERWRITE to decide on append mode vs. dummy	input file in nco_fl_lst_mk()

2019-04-14  Charlie Zender  <zender@uci.edu>

	* Changes to kd.h and nco_crt.h suggested by Pedro for Windows compatibility
