@@ -1,5 +1,7 @@
 2019-04-20  Charlie Zender  <zender@uci.edu>
 
+	* nco_rgr_wgt() re-arrange initialization code to suit layer-by-layer regridding, use memset()
+
 	* nco_rgr_wgt() remove ~150 lines of unused/unfinished !flg_mrv, flg_xtn code
 
 2019-04-19  Charlie Zender  <zender@uci.edu>
